# openGL_rgbGradientWheel

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
